--- a/templates/parks/showinfo.html.twig
+++ b/templates/parks/showinfo.html.twig
@@ -1,12 +1,14 @@
 {% extends 'base.html.twig' %}
-
+    {% block title %}
+        {{title}} | {{ parent() }}
+        {% endblock %}
 {% block body %}
 
-{{title}}: Information
+<h1 id='nat-information'>National Parks: Information</h1>
 <br><br><br><br><br>
-Here are your results: 
+<h2 class='h2-info'>Here are your results: </h2>
 <br><br><br>
-{{park}}
+<p class='nat-result'>{{park}}</p>
 <br><br><br><br><br>
 
 Here's the link to the homepage:
