--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -21,9 +21,7 @@ table{
     font-style: italic;
     text-shadow: none;
 }
-h1{
-    text-align: center;
-}
+
 
 tr:nth-of-type(3) , tr:nth-of-type(4){
     color:rgb(236, 53, 7);
@@ -49,8 +47,9 @@ a, a:hover, a:visited{
     color:yellow;
 }
 
-#nat-information{
-    color:crimson;
+h1{
+    text-align: center;
+    color:crimson
 }
 
 .nat-result{
