--- a/templates/parks/showinfo.html.twig
+++ b/templates/parks/showinfo.html.twig
@@ -8,7 +8,15 @@
 <br><br><br><br><br>
 <h2 class='h2-info'>Here are your results: </h2>
 <br><br><br>
-<p class='nat-result'>{{park}}</p>
+
+    
+<h3>
+{{result}}
+</h3>
+
+<img src={{photo}} alt={{result}}></img>
+
+    
 <br><br><br><br><br>
 
 Here's the link to the homepage:
