--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -88,7 +88,7 @@ div:nth-of-type(12) a, div:nth-of-type(12) a:hover, div:nth-of-type(12) a:visite
     text-decoration: none;
 }
 
-h1{
+h1, h3{
     text-align: center;
     color:crimson;
     text-shadow:crimson 1px 1px 5px;
@@ -124,4 +124,8 @@ div img {
     width: 80%;
     margin-bottom: 1rem;
     border-radius: 0.5rem;
+}
+
+a, a:hover, a:visited{
+    color:crimson;
 }
