--- a/templates/parks/showinfo.html.twig
+++ b/templates/parks/showinfo.html.twig
@@ -21,6 +21,6 @@
 
 Here's the link to the homepage:
 <br><br>
-<a href='{{ path("app_homepage")}}' target="_blank">Homepage</a>
+<a href='{{ path("app_homepage")}}'>Homepage</a>
 
 {% endblock %}
