--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,225 @@
+@import '~bootstrap';
+@import '~@fortawesome/fontawesome-free';
+@import '~@fontsource/roboto-condensed';
+
+* {
+    box-sizing: border-box;
+    font-weight: bold !important;
+    text-align: center !important;
+}
+
 body {
-    background-color: lightgray;
+    background-color: #252526;
+    font-weight: bolder;
+    color: white;
+    text-align: center;
+    width: 100%;
+    text-shadow: 1px 1px 0px grey;
+    margin-bottom: 4.5rem;
+}
+
+.container {
+    background-color: rgb(54, 52, 52);
+    box-shadow: 0px 3px 15px 12px rgb(194, 134, 204);
+}
+.container-info{
+    background-color: rgb(54, 52, 52);
+    box-shadow: 0px 3px 15px 12px rgb(194, 134, 204);
+    display: inline-block;
+}
+.container-info h2{
+    margin-top: 2rem;
+}
+.container-info img{
+    width: 50rem !important;
+}
+div:nth-of-type(3),
+div:nth-of-type(4) {
+    color: white;
+    box-shadow: 0px 3px 15px 2px crimson;
+    background-color: crimson;
+}
+
+div:nth-of-type(3) a,
+div:nth-of-type(3) a:hover,
+div:nth-of-type(3) a:visited,
+div:nth-of-type(4) a,
+div:nth-of-type(4) a:hover,
+div:nth-of-type(4) a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+div:nth-of-type(2),
+div:nth-of-type(5) {
+    color: white;
+    background-color: rgb(193, 225, 238);
+    box-shadow: 0px 3px 15px 2px rgb(193, 225, 238);
+}
+
+div:nth-of-type(2) a,
+div:nth-of-type(2) a:hover,
+div:nth-of-type(2) a:visited,
+div:nth-of-type(5) a,
+div:nth-of-type(5) a:hover,
+div:nth-of-type(5) a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+div:nth-of-type(6),
+div:nth-of-type(7) {
+    color: white;
+    background-color: rgb(89, 168, 241);
+    box-shadow: 0px 3px 15px 2px rgb(89, 168, 241);
+}
+
+div:nth-of-type(6) a,
+div:nth-of-type(6) a:hover,
+div:nth-of-type(6) a:visited,
+div:nth-of-type(7) a,
+div:nth-of-type(7) a:hover,
+div:nth-of-type(7) a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+div:nth-of-type(8),
+div:nth-of-type(9),
+div:nth-of-type(11) {
+    color: white;
+    background-color: rgb(250, 234, 4);
+    box-shadow: 0px 3px 15px 2px rgb(250, 234, 4);
+}
+
+div:nth-of-type(8) a,
+div:nth-of-type(8) a:hover,
+div:nth-of-type(8) a:visited,
+div:nth-of-type(9) a,
+div:nth-of-type(9) a:hover,
+div:nth-of-type(9) a:visited,
+div:nth-of-type(11) a,
+div:nth-of-type(11) a:hover,
+div:nth-of-type(11) a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+div:nth-of-type(10) {
+    color: white;
+    background-color: aquamarine;
+    box-shadow: 0px 3px 15px 2px aquamarine;
+}
+
+div:nth-of-type(10) a,
+div:nth-of-type(12) a:hover,
+div:nth-of-type(12) a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+div:nth-of-type(12) {
+    color: white;
+    background-color: rgb(115, 230, 115);
+    box-shadow: 0px 3px 15px 2px rgb(115, 230, 115);
+}
+
+div:nth-of-type(12) a,
+div:nth-of-type(12) a:hover,
+div:nth-of-type(12) a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+h1,
+h3 {
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 5.5rem;
+    margin-top: 2.5rem;
+}
+
+h1 span {
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    box-shadow: 0px 3px 50px 10px rgb(194, 134, 204);
+    border-radius: 10px;
+    padding: 1rem;
+    text-shadow: ghostwhite 1px 1px 5px;
+    background-color: #3c3c3d;
+}
+
+h2 {
+    text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
+}
+
+.nat-information {
+    color: aqua;
+    text-shadow: 0px 2px 5px rgb(213, 230, 224);
+    font-weight: bold;
+}
+
+.h2-info {
+    color: rgb(233, 240, 238);
+    text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.8);
+}
+.h3-result{
+    color:crimson;
+    text-shadow: 2px 2px 5px crimson;
+}
+img {
+    height: 10rem;
+}
+
+div {
+    display: inline-flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #3c3c3d;
+    margin: 1rem;
+    border-radius: 0.5rem;
+    width: 33%;
+}
+
+div p {
+    width: 100%;
+}
+
+div img {
+    width: 80%;
+    margin-bottom: 1rem;
+    border-radius: 0.5rem;
+}
+.showinfo-div{
+    background-color: inherit;
+}
+.showinfo-div img{
+    width: 100%;
+    height: 25rem !important;
+    border-radius: 10px;
+}
+a,
+a:hover,
+a:visited {
+    color: crimson;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+.container {
+    max-width: 1200px;
+    margin: auto;
+}
+
+div:first-child {
+    box-shadow: 0px 3px 15px 5px rgb(140, 73, 207);
+}
+
+div:first-child,
+div:first-child a:hover,
+div:first-child a:visited,
+div:first-child a {
+    background-color: rebeccapurple;
+    color: white;
+    text-decoration: none;
 }
