--- a/templates/parks/showlist.html.twig
+++ b/templates/parks/showlist.html.twig
@@ -14,7 +14,7 @@
 
 <br><br>
 
-Here's the link to the homepage:
+<p>Here's the link to the homepage:</p>
 <a href='{{ path("app_homepage")}}'>Homepage</a>
 </div>
 </div>
